--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "idgaf"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Mattias Cibien <mattias@mattiascibien.net>"]
 edition = "2018"
 
 [dependencies]
-clap = "2.33"
+clap = { version = "4.4", features = ["cargo"] }
 sanitize-filename = "0.5"
 pentry = "0.1"
